# password-manager

./: .dockerignore  .gitignore  Cargo.toml  README.md  compose.yaml  package.json
crates/account/: Cargo.toml  Dockerfile
crates/account/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: server.rs
dataset/: init.sql
dataset/data/: accounts.csv  profiles.csv
nginx/: api.conf  www.conf
