[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
actix-web = "4"
common = { path = "crates/common" }
deadpool-postgres = { version = "0.14", features = ["serde"] }
derive_more = { version = "1", features = ["full"] }
env_logger = "0"
log = "0"
serde = { version = "1", features = ["derive"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"